--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <dd>If you decide that you've made a mistake, it's very easy to un-stage a file so that it's not included in the next commit.</dd>
     </dl>
     <h4>How important Branching is</h4>
-    <p>As a designer the ability to branch off from your main project, experiment or refine, and then return back to your main project and merge in those changes is fantastic. No more will I create 15 versions of the same file, or multiple directories of the same project nested inside each other. With branching I can simply create a new branch do what I need to do and then decide whether or not I want to keep or get rid of the changes I've made. It's an incredibly liberating way to work and I would encourage you to learn as much as you can about how branching and merging work.</p>
+    <p>As a designer the ability to branch off from your main project, experiment or refine, and then return back to your main project and merge in those changes is fantastic. No more will I create 15 versions of the same file, or multiple directories of the same project nested inside each other. With branching I can simply create a new branch do what I need to do and then decide whether or not I want to keep or get rid of the changes I've made. It's an incredibly liberating way to work and I would encourage you to learn as much as you can about how branching and merging work. I am making some more changes.</p>
     <dl>
       <dt>Branches give you flexibility
       </dt>
